--- a/angular_quickstart/app/dashboard.component.html
+++ b/angular_quickstart/app/dashboard.component.html
@@ -1,9 +1,15 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
-  	<a *ngFor="let hero of heroes"  [routerLink]="['/detail', hero.id]"  class="col-1-4">
+  	<a *ngFor="let hero of heroes"  (click)="onSelect(hero)"  class="col-1-4">
     	<div class="module hero">
       		<h4>{{hero.name}}</h4>
     	</div>
   	</a>
 </div>
 
+<div *ngIf="selectedHero">
+  <h2>
+    {{selectedHero.name | uppercase}} is my hero
+  </h2>
+  <button (click)="gotoDetail()">View Details</button>
+</div>
