--- a/angular_quickstart/app/hero-detail.component.html
+++ b/angular_quickstart/app/hero-detail.component.html
@@ -5,6 +5,8 @@
     	<label>name: </label>
     	<input [(ngModel)]="hero.name" placeholder="name"/>
   	</div>
-
+	
+	<button (click)="save()" >保存</button>
+	<button (click)="delete()">删除</button>
   	<button (click)="goBack()">Back</button>
 </div>
