--- a/angular_quickstart/app/heroes.component.html
+++ b/angular_quickstart/app/heroes.component.html
@@ -1,8 +1,12 @@
 <h2>My Heroes</h2>
+
+<button (click)="add('yangying')" >新增</button>
+
 <ul class="heroes">
   	<li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
   		<span class="badge">{{hero.id}}</span> {{hero.name}}
 	</li>
 </ul>
+
 
 <my-hero-detail [hero]="selectedHero"></my-hero-detail>
