--- a/angular_quickstart/app/heroes.component.css
+++ b/angular_quickstart/app/heroes.component.css
@@ -45,3 +45,17 @@
 	margin-right: .8em;
 	border-radius: 4px 0 0 4px;
 }
+.heroes .deleteBtn{
+	display: inline-block;
+    font-size: small;
+    color: white;
+    padding: .8em;
+    line-height: 1em;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    background: gray;
+    border: 0;
+    margin: 0;
+    border-radius: 0 4px 4px 0;
+}
